<resources>
    <string name="app_name">FightADUI</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="common_text">Leave Everything un-checked if none of these apply</string>
    <string name="menu_settings">Settings</string>
    <string name="ask_email_id">ask@davidanbar.com</string>
    <string name="ottawa_number">613-755-4008 </string>
    <string name="toronto_number">416-833-3155  </string>
    <string name="montreal_number">514-993-3283 </string>
    <string name="toll_free_number">1-888-989-3946 </string>
    <string name="website">http://www.dividanbar.com</string>
    <string name="back_button_alert_message">Going back will close questionnaire and all answers will be deleted.</string>
    <string name="contact_details_text">This App was created by David Anber, a Criminal Lawyer practicing in Ontario and Quebec, Canada.\n\nYou can contact him for a free consultation, 24hrs/day for any criminal offence at the information below:</string>
    <string name="faq_question_one">The Breathalyzer says I am Guilty, why would I fight this?</string>
    <string name="faq_answer_one">If you plead guilty, there is a 100% chance you will be found guilty. If you refuse to plead guilty, the prosecutor will be forced to attempt to prove the case against you. There are all sorts of ways that the evidence could be successfully challenged. Additionally, since in most cases, the prosecutor is relying on your bodily substance (breath or blood) to use it against you in Court, they usually need to prove to the Court that the police followed all applicable rules in how that substance was obtained. If they fail to do this, it is possible that the breath results will be thrown out.</string>
    <string name="faq_question_three">What is the difference between “impaired driving” and “over 80”?</string>
    <string name="faq_answer_three">These are two distinct offences found in sections 253(1)(a) and (b) of the Criminal Code. Impaired driving means you drank enough alcohol to negatively impact your driving. Even one drink can impair you even if you are below the legal limit. “Over 80” means you drank more than the legal limit of 80mg of alcohol in 100mL of blood. Even if your walking, talking and driving is okay, you can still be charged with being over the legal limit. If you are charged with both offences (which is usually the case) you will need to beat both charges to avoid the consequences.</string>
    <string name="faq_question_two">I don’t have any priors will I get a break?</string>
    <string name="faq_answer_two">The prosecutors in Ontario and Quebec are on strict orders to prosecute all alcohol-related driving offences vigorously. Even if you have no prior record and even if you are otherwise a good guy/gal, you will not get a break. In most cases, the only way people can get a “good deal” is if the charge is changed to something different (i.e. a traffic ticket). This will almost never happen unless you mount a strong defence to your charges.</string>
    <string name="faq_question_four">I wasn’t driving, I was sitting in my car or sleeping in my car; can I be charged with impaired driving?</string>
    <string name="faq_answer_four">You cannot be charged with impaired driving, but you can be charged for offences relating to being in “care or control” of the vehicle. If you were in the driver’s seat, you need to convince the court you were not in care or control. Even if you didn’t intend to drive, the possibility that you could change your mind, or accidentally put the car in motion means that you could be convicted.</string>
    <string name="faq_question_five">I didn’t drink that much. I even have my bar tab. Can I challenge the breathalyzer results this way?</string>
    <string name="faq_answer_five">Since 2008 the ways in which you can use the “what did I have to drink” defence have been significantly limited.</string>
    <string name="faq_question_six">Can I get some form of restricted licence to let me go to and from work if I plead guilty?</string>
    <string name="faq_answer_six">No. If you are found guilty of any alcohol-related driving offence after a trial or after a guilty plea, the judge must prohibit you from driving without exceptions. In some provinces however, you might be able to qualify to get your licence back after only a fraction of the time imposed by the judge. You will need to consult the law applicable to your provincial Ministry of Transportation.</string>
    <string name="faq_question_seven">What can I do to deal with these charges?</string>
    <string name="faq_answer_seven">Contact a criminal lawyer to help you. David Anber is a criminal lawyer who offers free consultations. Tap here to contact him.</string>
    <string name="term_of_use_text">The use of this App is not legal advice.By using this App, you will be provided with information about how you could potentially fight alcohol-related driving charges,however this information should be discussed with a criminal lawyer first and it should not relied on to represent yourself. Do not consider any information received through this App to be legal advice and do not rely upon it to make any decisions in your case.\n\nFurther, the use of this App does NOT create a lawyer-client relationship. David Anber does NOT represent and does not owe a duty of confidentiality or loyalty to you unless you consult with him in person and he agrees to take your case.\n\nThis App is meant to provide information to people charged, in Canada, with “impaired” and “over 80” offences contrary to sections 253(1)(a) and (b) of the Criminal Code of Canada. This App cannot assist you with “impaired by drug” cases, “refuse breath sample” cases, cases involving the death of someone or boat/aircraft/railway equipment”.\n\nDavid Anber is a lawyer who practices in Ontario and Quebec.If your case is outside these two provinces you are encouraged to seek advice from a criminal lawyer practicing in that province since David Anber cannot give advice about the administration of your case without being retained to seek permission from another province’s Bar/Law Society.\n\nIf you do not wish to provide any information which could be accessible to others, you should close this App immediately and delete it without answering any questions and without providing any personal information. By using this App, you consent to any information you provide being sent to the law office of David Anber. Your information will not be shared with any third party. If you wish to have your information destroyed, please correspond in writing to David Anber at 45 O \'
Connor Street, Suite 1150, Ottawa, Ontario, K1P 1A4.</string>
    <string name="ques_one">What best describes how the police initially got involved in your case?</string>
    <string name="ques_two">At the time the police first spoke to you, how many people were in your vehicle?</string>
    <string name="ques_three">Were you in the driver’s seat of the vehicle, or were you somewhere else in the vehicle when the police arrived?</string>
    <string name="ques_four">When the police arrived at the accident were you in your vehicle or standing outside the vehicle?</string>
    <string name="ques_five">While you were at home – <u>after</u> driving but <u>before</u> the police arrived. Did you drink alcohol?</string>
    <string name="ques_six">After speaking to you, did the police…</string>
    <string name="ques_six2">Did the officer already have the handheld breathalyser with him or in his car?</string>
    <string name="ques_seven1">Prior to you dealing with police, did you drink a large quantity of alcohol in the 5en dash10 minutes before you met the officer?</string>
    <string name="ques_seven2">Did you tell the officer about this recent drinking</string>
    <string name="ques_eight">You blew into a small handheld breathalyser at the roadside. Did you:</string>
    <string name="ques_nine">Please indicate what time the following things happened:</string>
    <string name="ques_ten">When the police told you at the roadside that you had the right to speak to a lawyer was he/she reading it, or telling it to you from memory?</string>
    <string name="ques_eleven">When the police told you at the roadside that you had the right to speak to a lawyer what was your initial answer?</string>
    <string name="ques_twelve1">How long did it take to travel from the scene of you being arrested to the police station?</string>
    <string name="ques_twelve2">Did that time seem appropriate, or did it take much longer than it should have?</string>
    <string name="ques_thirteen1">Once you arrived at the police station were you able to go inside right away or did you have to wait?</string>
    <string name="ques_thirteen2">How long did you have to wait?</string>
    <string name="ques_fourteen1">Did you speak to a lawyer at the police station?</string>
    <string name="ques_fourteen2">[Why not]? </string>
    <string name="ques_fivteen1">Were you satisfied that the lawyer you spoke to gave you decent advice?</string>
    <string name="ques_fivteen2">[Did you express your dissatisfaction to the police?]?</string>
    <string name="ques_sixteen1">How long after you arrived at the police station did you get to speak to a lawyer?</string>
    <string name="ques_sixteen2">Approximately how long was the call?</string>
    <string name="ques_seventeen">After you finished speaking to a lawyer, approximately how long was it before you were brought to the room with the breathalyser?</string>
    <string name="ques_eighteen">During the process of providing breath samples into the breathalyser at the police station did anything strange happen.</string>
    <string name="ques_nineteen">What were your breath readings, and at what time were they taken?</string>
    <string name="ques_twenty">After you had been arrested, but before you gave breath samples at the police station did you drink any alcohol (i.e. hidden flask</string>
    <string name="ques_twty_one">Did any police officer make any of these comments to you while you were with police:</string>
    <string name="ques_twty_two">Do you think any of these things are true:</string>
    <string name="ques_twty_three">Do you have explanations to any of the following:</string>
    <string name="ques_twty_four">Did you receive any bad treatment during your time in police custody.</string>
    <string name="ques_twty_five">The police ultimately charged you with: </string>
    <string name="ques_twty_six">You were released how long after you finished the breathalyser testing</string>
    <string name="answer_one_options1">The police pulled you over in a traffic stop.</string>
    <string name="answer_one_options2">You drove up to a police “RIDE” spotcheck.</string>
    <string name="answer_one_options3">You were involved in a traffic accident.</string>
    <string name="answer_one_options4">You were sleeping/sitting in an unmoving vehicle and police came up to you.</string>
    <string name="answer_one_options5">Police came to your house and you were already inside.</string>
    <string name="answer_two_options1">You were by yourself in the vehicle.</string>
    <string name="answer_two_options2">There was one passenger in the front passenger seat.</string>
    <string name="answer_twelve2_option1">About right.</string>
    <string name="answer_twelve2_option2">Much too long.</string>
    <string name="answer_fourteen1_option1">Yes.</string>
    <string name="answer_fourteen1_option2">No.</string>
    <string name="answer_fourteen2_option1">You were not given a chance by the police there.</string>
    <string name="answer_fourteen2_option2">You declined.</string>
    <string name="answer_fourteen2_option3">You didn’t know any and told the police it was ok.</string>
    <string name="answer_fourteen2_option4">You tried to reach a lawyer but nobody answered.</string>
</resources>