<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:weightSum="100" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/faq_question_one"
                        android:textColor="#FFCC00" />

                    <com.scms.noghteh.JustifiedTextView
                        android:id="@+id/faq_ans_one_txt"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                       android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:textColor="#fff" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/faq_question_two"
                        android:textColor="#FFCC00" />

                    <com.scms.noghteh.JustifiedTextView
                        android:id="@+id/faq_ans_two_txt"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                         android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/faq_answer_two"
                        android:textColor="#fff" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/faq_question_three"
                        android:textColor="#FFCC00" />

                    <com.scms.noghteh.JustifiedTextView
                        android:id="@+id/faq_ans_three_txt"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                       android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/faq_answer_three"
                        android:textColor="#fff" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/faq_question_four"
                        android:textColor="#FFCC00" />

                    <com.scms.noghteh.JustifiedTextView
                        android:id="@+id/faq_ans_four_txt"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                       android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/faq_answer_four"
                        android:textColor="#fff" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/faq_question_five"
                        android:textColor="#FFCC00" />

                    <com.scms.noghteh.JustifiedTextView
                        android:id="@+id/faq_ans_five_txt"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/faq_answer_five"
                        android:textColor="#fff" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/faq_question_six"
                        android:textColor="#FFCC00" />

                    <com.scms.noghteh.JustifiedTextView
                        android:id="@+id/faq_ans_six_txt"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/faq_answer_six"
                        android:textColor="#fff" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/faq_question_seven"
                        android:textColor="#FFCC00" />

                    <TextView
                        android:id="@+id/faq_seven_ans"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|right"
                       android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/faq_answer_seven"
                        android:textColor="#fff" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>