<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:weightSum="100" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="5"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/question_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Question"
            android:textColor="#fff"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="85"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/double_radio_type_ques"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/ques_fourteen1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fff" />

        <RadioGroup
            android:id="@+id/double_radiogroup1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/double_radio_type1_rd1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_selector"
                android:padding="10dp"
                android:text="@string/answer_fourteen1_option1"
                android:textColor="#fff" />

            <RadioButton
                android:id="@+id/double_radio_type1_rd2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_selector"
                android:padding="10dp"
                android:text="@string/answer_fourteen1_option2"
                android:textColor="#fff" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/double_radio_type_sub_question_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="gone" >

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/double_radio_type_sub_ques"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ques_fourteen2"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#fff" />

                    <RadioGroup
                        android:id="@+id/double_radiogroup2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <RadioButton
                            android:id="@+id/double_radio_type2_rd1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/radio_selector"
                            android:padding="10dp"
                            android:text="@string/answer_fourteen2_option1"
                            android:textColor="#fff" />

                        <RadioButton
                            android:id="@+id/double_radio_type2_rd2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/radio_selector"
                            android:padding="10dp"
                            android:text="@string/answer_fourteen2_option2"
                            android:textColor="#fff" />

                        <RadioButton
                            android:id="@+id/double_radio_type2_rd3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/radio_selector"
                            android:padding="10dp"
                            android:text="@string/answer_fourteen2_option3"
                            android:textColor="#fff" />

                        <RadioButton
                            android:id="@+id/double_radio_type2_rd4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/radio_selector"
                            android:padding="10dp"
                            android:text="@string/answer_fourteen2_option4"
                            android:textColor="#fff" />
                    </RadioGroup>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <Button
                android:id="@+id/prev_btn"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/back_btn" />

            <Button
                android:id="@+id/next_btn"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/next_btn" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>